--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -22,7 +22,6 @@
             <p class="text-center">Get in touch by dropping us a message using the form below. We will reply to you as soon as we can. Or You can call using the phone number below.</p>
         </div>
     </div>
-
     <div class="row">
         <div class="col-10 offset-1 col-md-8 offset-md-2">
             <!-- CONTACT FORM -->
@@ -37,6 +36,7 @@
             </form>
         </div>
     </div>
+    <!-- PHONE NR / OPEN HOURS -->
     <div class="row mt-5">
         <div class="col-12 col-md-4 offset-md-2">
             <h1 class="text-center"><i class="fas fa-phone"></i></h1>
