--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
-        type="text/css"/>
+        type="text/css" />
     <!-- FAVICON -->
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}">
@@ -38,7 +38,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+    </script>
     <!-- Stripe -->
     <script src="https://js.stripe.com/v3/"></script>
     {% endblock %}
@@ -53,7 +55,7 @@
         <!-- DELIVERY BANNER -->
         <div id="delivery-banner" class="row text-center">
             <div class="col">
-              
+
                 <h4 class="logo-font my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>
             </div>
         </div>
@@ -94,15 +96,15 @@
                             aria-expanded="false">
                             SEARCH
                         </a>
-                        <div class="container-fluid dropdown-menu dropdown-search border-0 w-100 p-3 my-0 mx-0" aria-labelledby="mobile-search">
+                        <div class="container-fluid dropdown-menu dropdown-search border-0 w-100 p-3 my-0 mx-0"
+                            aria-labelledby="mobile-search">
                             <p class="text-center"><small>What are you looking for?</small></p>
                             <form method="GET" action="{% url 'products' %}">
                                 <div class="input-group w-50 mx-auto rounded-4">
                                     <input class="form-control rounded-0" type="text" name="q"
                                         placeholder="Search Products...">
                                     <div class="input-group-append">
-                                        <button class="form-control btn btn-black"
-                                            type="submit">
+                                        <button class="form-control btn btn-black" type="submit">
                                             <span class="icon">
                                                 <i class="fas fa-search"></i>
                                             </span>
@@ -121,13 +123,18 @@
                         <div class="dropdown-menu border-0 dd-menu" aria-labelledby="user-options">
                             {% if request.user.is_authenticated %}
                             {% if request.user.is_superuser %}
-                            <a href="{% url 'add_product' %}" class="dropdown-item"><i class="far fa-clipboard"></i> Product Management</a>
+                            <a href="{% url 'add_product' %}" class="dropdown-item"><i class="far fa-clipboard"></i>
+                                Product Management</a>
                             {% endif %}
-                            <a href="{% url 'profile' %}" class="dropdown-item"><i class="fas fa-portrait"></i> Profile</a>
-                            <a href="{% url 'account_logout' %}" class="dropdown-item"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
+                            <a href="{% url 'profile' %}" class="dropdown-item"><i class="fas fa-portrait"></i>
+                                Profile</a>
+                            <a href="{% url 'account_logout' %}" class="dropdown-item"><i
+                                    class="fas fa-sign-out-alt"></i> Sign Out</a>
                             {% else %}
-                            <a href="{% url 'account_signup' %}" class="dropdown-item"><i class="fas fa-edit"></i> Sign Up</a>
-                            <a href="{% url 'account_login' %}" class="dropdown-item"><i class="fas fa-sign-in-alt"></i> Sign In</a>
+                            <a href="{% url 'account_signup' %}" class="dropdown-item"><i class="fas fa-edit"></i> Sign
+                                Up</a>
+                            <a href="{% url 'account_login' %}" class="dropdown-item"><i class="fas fa-sign-in-alt"></i>
+                                Sign In</a>
                             {% endif %}
                         </div>
                     </li>
@@ -147,18 +154,18 @@
         </div>
         <!-- MOBILE NAVBAR -->
         <div id="mobile-nav" class="row d-block d-lg-none">
-        <nav class="navbar navbar-expand-lg navbar-light w-100">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
-                aria-controls="main-nav" aria-expanded="false" aria-label="Toggle Navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a href="{% url 'home' %}" class="nav-link main-logo-link navbar-brand mx-0 d-none d-sm-block">
-                <h2 class="logo-font text-black">SkateStore<span class="dot">.</span></h2>
-            </a>
-            {% include 'includes/mobile-top-header.html' %}
-            {% include 'includes/mobile-nav.html' %}
-        </nav>
-    </div>
+            <nav class="navbar navbar-expand-lg navbar-light w-100">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
+                    aria-controls="main-nav" aria-expanded="false" aria-label="Toggle Navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <a href="{% url 'home' %}" class="nav-link main-logo-link navbar-brand mx-0 d-none d-sm-block">
+                    <h2 class="logo-font text-black">SkateStore<span class="dot">.</span></h2>
+                </a>
+                {% include 'includes/mobile-top-header.html' %}
+                {% include 'includes/mobile-nav.html' %}
+            </nav>
+        </div>
     </header>
     <!-- TOASTS -->
     {% if messages %}
@@ -186,9 +193,9 @@
     {% endblock %}
 
     <!-- BACK TO TOP BUTTON -->
-	<button onclick="topFunction()" id="myBtn" title="Back To Top">
-		<i class="fas fa-chevron-up"></i>
-	</button>
+    <button onclick="topFunction()" id="myBtn" title="Back To Top">
+        <i class="fas fa-chevron-up"></i>
+    </button>
     <!-- FOOTER -->
     <footer>
         <div class="row container-fluid footer-top mt-4 mx-0">
@@ -200,9 +207,11 @@
                 <form action="{% url 'sub_form' %}" method="POST">
                     {% csrf_token %}
                     <div class="form-group subscribe py-2 w-100">
-                        <input type="email" class="form-control rounded-0" id="email_address" name="email_address" placeholder="Enter your e-mail">
+                        <input type="email" class="form-control rounded-0" id="email_address" name="email_address"
+                            placeholder="Enter your e-mail">
                         <button class="btn subscribe-button rounded-0" type="submit">
-                            <p class="d-none d-sm-block uppercase">Subscribe</p> <i class="far fa-envelope d-sm-none"></i>
+                            <p class="d-none d-sm-block uppercase">Subscribe</p> <i
+                                class="far fa-envelope d-sm-none"></i>
                         </button>
                     </div>
                 </form>
@@ -217,7 +226,7 @@
                 {% if request.user.is_authenticated %}
                 <a href="{% url 'profile' %}">My Account</a> <br>
                 {% endif %}
-                
+
             </div>
             <div class="col-12 col-md-4">
                 <h5 class="text-left uppercase">Contact Us</h5>
@@ -241,22 +250,23 @@
                             <i class="fab fa-instagram"></i>
                         </a></li>
                     <li><a href="https://www.pinterest.com/" target="_blank" rel="noopener"
-                        aria-label="Link To Pinterest">
-                        <i class="fab fa-pinterest"></i>
-                    </a></li>
+                            aria-label="Link To Pinterest">
+                            <i class="fab fa-pinterest"></i>
+                        </a></li>
                     <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                        aria-label="Link To Facebook">
-                        <i class="fab fa-facebook"></i>
-                    </a></li>
+                            aria-label="Link To Facebook">
+                            <i class="fab fa-facebook"></i>
+                        </a></li>
                 </ul>
             </div>
             <hr>
             <div class="row mb-3">
                 <div class="col">
-                 <small class="text-muted">© <span class="copyright"></span> Kagebounshin. All Rights Reserved. </small>
+                    <small class="text-muted">© <span class="copyright"></span> Kagebounshin. All Rights Reserved.
+                    </small>
                 </div>
             </div>
-        </div>        
+        </div>
     </footer>
 
     {% block postloadjs %}
@@ -267,18 +277,19 @@
         // FOR COPYRIGHT YEAR
         $('.copyright').text(new Date().getFullYear());
 
-        $(document).ready(function() {
+        $(document).ready(function () {
             // DROPDOWN HOVER FOR ACCOUNT LINK IN NAVBAR
             $('.dd-hover').hover(
-                function(){
+                function () {
                     $(this).children('.dd-menu').slideDown('fast');
                 },
-                function(){
+                function () {
                     $(this).children('.dd-menu').slideUp('400');
-                    }
-                );
+                }
+            );
         });
     </script>
     {% endblock %}
 </body>
+
 </html>
