--- a/templates/includes/mobile-nav.html
+++ b/templates/includes/mobile-nav.html
@@ -1,3 +1,4 @@
+<!-- NAVIGATION ITEMS FOR BURGER MENU -->
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="list-unstyled my-0 d-block d-lg-none">
         <li class="nav-item">
