--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,8 +1,10 @@
+<!-- SUCCESS TOAST -->
 <div class="toast custom-toast rounded-0 border-top-0" data-autohide="false">
     <div class="arrow-up arrow-success"></div>
     <div class="w-100 toast-capper bg-success"></div>
     <div class="toast-header bg-white text-dark">
         <strong class="mr-auto uppercase">Success!</strong>
+        <!-- CLOSE BUTTON -->
         <button type="button" class="ml-2 close" data-dismiss="toast" aria-label="Close">
             <span aria-hidden="true"><i class="fas fa-times"></i></span>
         </button>
@@ -14,11 +16,13 @@
                 <hr class="mt-1 mb-3">
             </div>
         </div>
+        <!-- BAG ITEMS -->
         {% if grand_total and not on_profile_page %}
             <p class="logo-font bg-white text-black py-1">Your Bag ({{ product_count }})</p>
             <div class="bag-notification-wrapper">
                 {% for item in bag_items %}
                     <div class="row">
+                        <!-- IMAGES -->
                         <div class="col-3 my-1">
                             {% if item.product.image %}
                             <img class="w-100" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
@@ -26,6 +30,7 @@
                             <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
                             {% endif %}
                         </div>
+                        <!-- PRODUCT INFO -->
                         <div class="col-9">
                             <p class="my-0 uppercase"><strong>{{ item.product.name }}</strong></p>
                             <p class="my-0 small">Size: {% if item.product.has_sizes %}{{ item.size|upper }}{% else %}N/A{% endif %}</p>
@@ -36,6 +41,7 @@
             </div>
             <div class="row">
                 <div class="col-12">
+                    <!-- DEIVERY COST -->
                     <strong><p class="mt-3 mb-1 text-black">
                         Total{% if free_delivery_delta > 0 %} (Exc. delivery){% endif %}: 
                         <span class="float-right">${{ total|floatformat:2 }}</span>
@@ -45,6 +51,7 @@
                             Spend <strong>${{ free_delivery_delta }}</strong> more to get free next day delivery!
                         </p>
                     {% endif %}
+                    <!-- CHECKOUT BUTTON -->
                     <a href="{% url 'view_bag' %}" class="add-button btn btn-sm rounded-4 mt-3">
                         <span class="text-uppercase">Go To Secure Checkout</span>
                         <span class="icon">
