--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -4,15 +4,15 @@
 
 
 {% block extra_css %}
-    <link rel="stylesheet" href="{% static 'bag/css/bag.css' %}">
+<link rel="stylesheet" href="{% static 'bag/css/bag.css' %}">
 {% endblock %}
 
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
     </div>
+</div>
 {% endblock %}
 
 {% block content %}
@@ -43,20 +43,19 @@
                     <div class="form-group w-100">
                         <div class="input-group">
                             <div class="input-group-prepend">
-                                <button class="decrement-qty btn rounded-0" 
-                                    data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
+                                <button class="decrement-qty btn rounded-0" data-item_id="{{ item.item_id }}"
+                                    id="decrement-qty_{{ item.item_id }}">
                                     <span>
                                         <i class="fas fa-minus fa-sm"></i>
                                     </span>
                                 </button>
                             </div>
-                            <input class="form-control qty_input text-center" type="number"
-                                name="quantity" value="{{ item.quantity }}" min="1" max="99"
-                                data-item_id="{{ item.item_id }}"
+                            <input class="form-control qty_input text-center" type="number" name="quantity"
+                                value="{{ item.quantity }}" min="1" max="99" data-item_id="{{ item.item_id }}"
                                 id="id_qty_{{ item.item_id }}">
                             <div class="input-group-append">
-                                <button class="increment-qty btn rounded-0"
-                                    data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
+                                <button class="increment-qty btn rounded-0" data-item_id="{{ item.item_id }}"
+                                    id="increment-qty_{{ item.item_id }}">
                                     <span>
                                         <i class="fas fa-plus fa-sm"></i>
                                     </span>
@@ -69,7 +68,8 @@
             </div>
             <!-- PRODUCT INFORMATION -->
             <div class="col-7 col-md-8 item-info pt-1">
-                <p class="my-0"><strong class="mt-4">{{ item.product.name }}</strong> <a class="remove-item text-danger" id="remove_{{ item.item_id }}"><small><i class="far fa-trash-alt"></i></small></a></p>
+                <p class="my-0"><strong class="mt-4">{{ item.product.name }}</strong> <a class="remove-item text-danger"
+                        id="remove_{{ item.item_id }}"><small><i class="far fa-trash-alt"></i></small></a></p>
                 <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
                 <p class="mt-2"><strong>${{ item.product.price | calc_subtotal:item.quantity }}</strong></p>
             </div>
@@ -79,14 +79,14 @@
         <div class="row mt-2">
             <hr class="d-none d-md-block">
             <div class="col-12">
-            <!-- BAG TOTAL -->
+                <!-- BAG TOTAL -->
                 <h6><strong>Bag Total: ${{ total|floatformat:2 }}</strong></h6>
                 <h6>Delivery: ${{ delivery|floatformat:2 }}</h6>
                 <h4 class="mt-4"><strong>Grand Total: ${{ grand_total|floatformat:2 }}</strong></h4>
                 {% if free_delivery_delta > 0 %}
-                    <p class="mb-1 text-danger">
-                        You could get free delivery by spending just <strong>${{ free_delivery_delta }}</strong> more!
-                    </p>
+                <p class="mb-1 text-danger">
+                    You could get free delivery by spending just <strong>${{ free_delivery_delta }}</strong> more!
+                </p>
                 {% endif %}
                 <!-- BACK TO PRODUCTS BUTTON -->
                 <a href="{% url 'products' %}" class="shop-now-button btn btn-md rounded-0 text-uppercase">
@@ -104,7 +104,7 @@
                 </a>
             </div>
         </div>
-    {% else %}
+        {% else %}
         <!-- SHOPPING BAG IF NOTHING IN THE BAG -->
         <div class="row">
             <div class="col">
@@ -117,7 +117,7 @@
                 </a>
             </div>
         </div>
-    {% endif %}
+        {% endif %}
     </div>
 </div>
 
@@ -129,22 +129,25 @@
 
 <script type="text/javascript">
     // UPDATE QUANTITY ON CLICK
-    $('.update-link').click(function(e) {
+    $('.update-link').click(function (e) {
         var form = $(this).prev('.update-form');
         form.submit();
     })
     // REMOVE ITEM ON CLICK
-    $('.remove-item').click(function(e) {
+    $('.remove-item').click(function (e) {
         var csrfToken = "{{ csrf_token }}";
         var itemId = $(this).attr('id').split('remove_')[1];
         var size = $(this).data('product_size');
         var url = `/bag/remove/${itemId}/`;
-        var data = {'csrfmiddlewaretoken': csrfToken, 'product_size': size};
+        var data = {
+            'csrfmiddlewaretoken': csrfToken,
+            'product_size': size
+        };
 
         $.post(url, data)
-         .done(function() {
-             location.reload();
-         });
+            .done(function () {
+                location.reload();
+            });
     })
 </script>
 
