--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_css %}
-    <link rel="stylesheet" href="{% static 'home/css/home.css' %}">
+<link rel="stylesheet" href="{% static 'home/css/home.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -18,7 +18,8 @@
             </p>
             <div class="my-5">
                 <h4>
-                    <a href="{% url 'products' %}" class="shop-now-button btn btn-md rounded-0 text-uppercase py-1 mb-5">Shop Now</a>
+                    <a href="{% url 'products' %}"
+                        class="shop-now-button btn btn-md rounded-0 text-uppercase py-1 mb-5">Shop Now</a>
                 </h4>
             </div>
         </div>
@@ -27,41 +28,40 @@
 <!-- CAROUSEL -->
 <div id="carouselExampleIndicators" class="container carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
     </ol>
     <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="{{ MEDIA_URL }}unsplash01.jpg" alt="Second slide">
-        <div class="carousel-caption d-none d-md-block">
-            <h5>...</h5>
-            <p>...</p>
-          </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="{{ MEDIA_URL }}unsplash02.jpg" alt="Second slide">
-        <div class="carousel-caption d-none d-md-block">
-            <h5>...</h5>
-            <p>...</p>
-          </div>
-      </div>
-     
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-</div>
+        <div class="carousel-item active">
+            <img class="d-block w-100" src="{{ MEDIA_URL }}unsplash01.jpg" alt="Second slide">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>...</h5>
+                <p>...</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="{{ MEDIA_URL }}unsplash02.jpg" alt="Second slide">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>...</h5>
+                <p>...</p>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
 </div>
 <!-- SHOPNOW SECTION -->
 <div class="row container shopnow-container bg-shopnow pt-3 pb-3 uppercase">
     <a href="{% url 'products' %}?category=decks" id="shopnow" class="col-6 col-sm-6 col-md-4">
         <div id="shopnow-inner">
-            <h3><img src="https://img.icons8.com/ios/100/ffffff/skateboard-without-wheels.png"/></h3>
+            <h3><img src="https://img.icons8.com/ios/100/ffffff/skateboard-without-wheels.png" /></h3>
         </div>
         <div class="middle text-white">
             <h3 class="shopnow-header">Decks</h3>
@@ -69,7 +69,7 @@
     </a>
     <a href="{% url 'products' %}?category=trucks" id="shopnow" class="col-6 col-sm-6 col-md-4">
         <div id="shopnow-inner">
-            <h3><img src="https://img.icons8.com/ios/100/ffffff/skateboard-truck.png"/></h3>
+            <h3><img src="https://img.icons8.com/ios/100/ffffff/skateboard-truck.png" /></h3>
         </div>
         <div class="middle text-white">
             <h3 class="shopnow-header">Trucks</h3>
@@ -77,7 +77,7 @@
     </a>
     <a href="{% url 'products' %}?category=wheels" id="shopnow" class="col-6 col-sm-6 col-md-4">
         <div id="shopnow-inner">
-            <h3><img src="https://img.icons8.com/ios/80/ffffff/skateboard-wheel.png"/></h3>
+            <h3><img src="https://img.icons8.com/ios/80/ffffff/skateboard-wheel.png" /></h3>
         </div>
         <div class="middle text-white">
             <h3 class="shopnow-header">Wheels</h3>
@@ -85,7 +85,7 @@
     </a>
     <a href="{% url 'products' %}?category=bearings" id="shopnow" class="col-6 col-sm-6 col-md-4">
         <div id="shopnow-inner">
-            <h3><img src="https://img.icons8.com/dotty/80/ffffff/final-state.png"/></h3>
+            <h3><img src="https://img.icons8.com/dotty/80/ffffff/final-state.png" /></h3>
         </div>
         <div class="middle text-white">
             <h3 class="shopnow-header">Bearings</h3>
@@ -93,7 +93,7 @@
     </a>
     <a href="{% url 'products' %}?category=griptape" id="shopnow" class="col-6 col-sm-6 col-md-4">
         <div id="shopnow-inner">
-            <h3><img src="https://img.icons8.com/ios-filled/100/ffffff/skateboard-grip-tape.png"/></h3>
+            <h3><img src="https://img.icons8.com/ios-filled/100/ffffff/skateboard-grip-tape.png" /></h3>
         </div>
         <div class="middle text-white">
             <h3 class="shopnow-header">Griptape</h3>
@@ -101,11 +101,12 @@
     </a>
     <a href="{% url 'products' %}?category=misc" id="shopnow" class="col-6 col-sm-6 col-md-4">
         <div id="shopnow-inner">
-            <h3><img src="https://img.icons8.com/ios/40/ffffff/screwdriver.png"/>
-                <img src="https://img.icons8.com/windows/40/ffffff/Production-order.png" class="d-none d-sm-inline"/>
+            <h3><img src="https://img.icons8.com/ios/40/ffffff/screwdriver.png" />
+                <img src="https://img.icons8.com/windows/40/ffffff/Production-order.png" class="d-none d-sm-inline" />
                 <br>
-                <img src="https://img.icons8.com/external-kiranshastry-lineal-kiranshastry/40/ffffff/external-screw-industry-kiranshastry-lineal-kiranshastry.png" class="d-none d-sm-inline"/>
-                <img src="https://img.icons8.com/ios/40/ffffff/open-end-wrench.png" class="d-none d-sm-inline"/>
+                <img src="https://img.icons8.com/external-kiranshastry-lineal-kiranshastry/40/ffffff/external-screw-industry-kiranshastry-lineal-kiranshastry.png"
+                    class="d-none d-sm-inline" />
+                <img src="https://img.icons8.com/ios/40/ffffff/open-end-wrench.png" class="d-none d-sm-inline" />
             </h3>
         </div>
         <div class="middle text-white">
@@ -113,11 +114,11 @@
         </div>
     </a>
 </div>
-  <!-- TEXT ONLY ON SM DEVICES -->
+<!-- TEXT ONLY ON SM DEVICES -->
 <div class="row mt-5 d-sm-none">
     <div class="col-12 col-md-6 offset-md-3 text-center">
         <h1 class="uppercase">HELLO, New to Skateboarding?</h1>
-                <p>Dont worry we got you covered!</p>
+        <p>Dont worry we got you covered!</p>
     </div>
 </div>
 <!-- IMAGE -->
