--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -2,15 +2,15 @@
 {% load static %}
 
 {% block extra_css %}
-    <link rel="stylesheet" href="{% static 'products/css/add_edit_product.css' %}">
+<link rel="stylesheet" href="{% static 'products/css/add_edit_product.css' %}">
 {% endblock %}
 
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
     </div>
+</div>
 {% endblock %}
 
 {% block content %}
@@ -23,19 +23,20 @@
             <hr>
         </div>
     </div>
-
+    <!-- ADD PRODUCT -->
     <div class="row add-edit-container">
         <div class="col-12 col-md-6 offset-md-3 mt-5">
             <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
                 {% csrf_token %}
                 {% for field in form %}
-                    {% if field.name != 'image' %}
-                        {{ field | as_crispy_field }}
-                    {% else %}
-                        {{ field }}
-                    {% endif %}
+                {% if field.name != 'image' %}
+                {{ field | as_crispy_field }}
+                {% else %}
+                {{ field }}
+                {% endif %}
                 {% endfor %}
                 <div class="text-right">
+                    <!-- ADD BUTTON -->
                     <a class="btn btn-md rounded-0" href="{% url 'products' %}">Cancel</a>
                     <button class="btn btn-md rounded-0" type="submit">Add Product</button>
                 </div>
@@ -49,7 +50,8 @@
 {% block poastloadjs %}
     {{ block.super }}
     <script type="text/javascript">
-        $('#new-image').change(function() {
+        // DISPLAYES A PREVIEW OF THE IMAGE
+        $('#new-image').change(function () {
             var file = $('#new-image')[0].files[0];
             $('#filename').text(`Image will be set to: ${file.name}`);
         });
