--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,59 +1,67 @@
 <ul class="mobile-top-header">
+    <!-- SEARCH BAR -->
     <li class="list-inline-item">
-      <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <div class="text-center">
-              <div><i class="fas fa-search fa-lg"></i></div>
-              <p class="my-0">Search</p>
-          </div>
-      </a>
-      <div class="container-fluid dropdown-menu dropdown-search border-0 rounded-0 my-0 mx-0" aria-labelledby="mobile-search">
-        <p class="text-center"><small>What are you looking for?</small></p>
-          <form class="form" method="GET" action="{% url 'products' %}">
-              <div class="input-group w-100 mx-auto">
-                  <input class="form-control" type="text" name="q" placeholder="Search Products...">
-                  <div class="input-group-append">
-                      <button class="form-control form-control btn btn-black" type="submit">
-                          <span class="icon">
-                              <i class="fas fa-search"></i>
-                          </span>
-                      </button>
-                  </div>
-              </div>
-          </form>
-      </div>
-  </li>
-  <li class="list-inline-item dropdown">
-      <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <div class="text-center">
-              <div><i class="fas fa-user fa-lg"></i></div>
-              <p class="my-0">Account</p>
-          </div>
-      </a>
-      <div class="dropdown-menu border-0" aria-labelledby="user-options">
-          {% if request.user.is_authenticated %}
-              {% if request.user.is_superuser %}
-                  <a href="{% url 'add_product' %}" class="dropdown-item"><i class="far fa-clipboard"></i> Product Management</a>
-              {% endif %}
-              <a href="{% url 'profile' %}" class="dropdown-item"><i class="fas fa-portrait"></i> Profile</a>
-              <a href="{% url 'account_logout' %}" class="dropdown-item"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
-          {% else %}
-              <a href="{% url 'account_signup' %}" class="dropdown-item"><i class="fas fa-edit"></i> Sign Up</a>
-              <a href="{% url 'account_login' %}" class="dropdown-item"><i class="fas fa-sign-in-alt"></i></i> Sign In</a>
-          {% endif %}
-      </div>
-  </li>
-  <li class="list-inline-item">
-      <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="{% url 'view_bag' %}">
-          <div class="text-center">
-              <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-              <p class="my-0">
-                  {% if grand_total %}
-                      ${{ grand_total|floatformat:2 }}
-                  {% else %}
-                      $0.00
-                  {% endif %}
-              </p>
-          </div>
-      </a>
+        <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            <div class="text-center">
+                <div><i class="fas fa-search fa-lg"></i></div>
+                <p class="my-0">Search</p>
+            </div>
+        </a>
+        <div class="container-fluid dropdown-menu dropdown-search border-0 rounded-0 my-0 mx-0"
+            aria-labelledby="mobile-search">
+            <p class="text-center"><small>What are you looking for?</small></p>
+            <form class="form" method="GET" action="{% url 'products' %}">
+                <div class="input-group w-100 mx-auto">
+                    <input class="form-control" type="text" name="q" placeholder="Search Products...">
+                    <div class="input-group-append">
+                        <button class="form-control form-control btn btn-black" type="submit">
+                            <span class="icon">
+                                <i class="fas fa-search"></i>
+                            </span>
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </div>
     </li>
-  </ul>
+    <!-- ACCOUNT -->
+    <li class="list-inline-item dropdown">
+        <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            <div class="text-center">
+                <div><i class="fas fa-user fa-lg"></i></div>
+                <p class="my-0">Account</p>
+            </div>
+        </a>
+        <div class="dropdown-menu border-0" aria-labelledby="user-options">
+            {% if request.user.is_authenticated %}
+            {% if request.user.is_superuser %}
+            <a href="{% url 'add_product' %}" class="dropdown-item"><i class="far fa-clipboard"></i> Product
+                Management</a>
+            {% endif %}
+            <a href="{% url 'profile' %}" class="dropdown-item"><i class="fas fa-portrait"></i> Profile</a>
+            <a href="{% url 'account_logout' %}" class="dropdown-item"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
+            {% else %}
+            <a href="{% url 'account_signup' %}" class="dropdown-item"><i class="fas fa-edit"></i> Sign Up</a>
+            <a href="{% url 'account_login' %}" class="dropdown-item"><i class="fas fa-sign-in-alt"></i></i> Sign In</a>
+            {% endif %}
+        </div>
+    </li>
+    <!-- BAG -->
+    <li class="list-inline-item">
+        <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none"
+            href="{% url 'view_bag' %}">
+            <div class="text-center">
+                <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                <p class="my-0">
+                    {% if grand_total %}
+                    ${{ grand_total|floatformat:2 }}
+                    {% else %}
+                    $0.00
+                    {% endif %}
+                </p>
+            </div>
+        </a>
+    </li>
+</ul>
